--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,12 @@
 {
-  "title": "Simple GOT books"
+  "main-navigation": {
+    "index": "Home",
+    "books": "Books",
+    "characters": "Characters"
+  },
+  "footer": {
+    "title": "Cotontigeh Lab",
+    "subtitle": "Demo with nextjs",
+    "copyright": "Copyright © 2023 - Don't care at all"
+  }
 }
