--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,3 +1,12 @@
 {
-  "title": "Les livres de GOT"
+  "main-navigation": {
+    "index": "Accueil",
+    "books": "Livres",
+    "characters": "Personnages"
+  },
+  "footer": {
+    "title": "Cotontigeh Lab",
+    "subtitle": "Demo pour react - nextjs",
+    "copyright": "Copyright © 2023 - Aucune importance"
+  }
 }
