--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -8,5 +8,6 @@
     "title": "Cotontigeh Lab",
     "subtitle": "Demo with nextjs",
     "copyright": "Copyright © 2023 - Don't care at all"
-  }
+  },
+  "see-more": "See more"
 }
