--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -8,5 +8,6 @@
     "title": "Cotontigeh Lab",
     "subtitle": "Demo pour react - nextjs",
     "copyright": "Copyright © 2023 - Aucune importance"
-  }
+  },
+  "see-more": "En voir plus"
 }
