fix(translations): wrong words

--- a/public/locales/fr/books.json
+++ b/public/locales/fr/books.json
@@ -1,5 +1,5 @@
 {
-  "title": "Tout les livres",
+  "title": "Tous les livres",
   "authors": "Auteurs",
   "pages": "Nombre de pages",
   "seriesNumber": "Numéro de série"
