--- a/public/locales/fr/characters.json
+++ b/public/locales/fr/characters.json
@@ -1,5 +1,5 @@
 {
-  "title": "Tout les personnages",
+  "title": "Tous les personnages",
   "seasons": "Présent dans les saisons",
   "no-season": "N'apparaît jamais dans la série télé",
   "actors": "Joué par",
